# SigOS

./: .editorconfig  .gitattributes  Cargo.toml  README.md
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
src/: gdt.rs  init.rs  interrupts.rs  log.rs  main.rs
